[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaincraft"
version = "0.6.0"
description = "A platform for blockchain education and prototyping"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "Chaincraft Contributors", email = "chaincraft@example.com"}
]
maintainers = [
    {name = "Chaincraft Contributors", email = "chaincraft@example.com"}
]
keywords = ["blockchain", "education", "prototyping", "distributed", "consensus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=44.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "flake8>=3.8.0",
    "black>=21.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["chaincraft"]

[tool.coverage.report]
fail_under = 50

[project.urls]
Homepage = "https://github.com/jio-gl/chaincraft"
Repository = "https://github.com/jio-gl/chaincraft"
Documentation = "https://github.com/jio-gl/chaincraft#readme"
"Bug Tracker" = "https://github.com/jio-gl/chaincraft/issues"

[project.scripts]
chaincraft-cli = "chaincraft_cli:main"

[tool.setuptools]
py-modules = ["chaincraft_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chaincraft*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py38']